# Circular

./: .gitignore  Cargo.toml  LICENSE  README.md
C/: Makefile  circ_buf.c  circ_buf.h  test_circ_buf.c
C#/: CircBuf.cs  TestCircBuf.cs
C++/Chan/: Chan.h  Chan.hpp  Makefile  testChan.cpp
C++/Copying/: CircBuf.h  CircBuf.hpp  Makefile  testCircBuf.cpp
C++/Moving/: CircBuf.h  CircBuf.hpp  testCircBuf.cpp
C++/tmp/: a.out  tmp.cpp
Go/circular/: go.mod
Go/src/github.com/keith-cullen/circular/circbuf/: circbuf.go  circbuf_test.go
Rust/: Cargo.toml
Rust/src/: copying.rs  copying_tests.rs  lib.rs  moving.rs  moving_tests.rs
src/: copying.rs  copying_tests.rs  lib.rs  moving.rs  moving_tests.rs
